[0.86]
- fixed bug when one of the states is named "n" (reported by Marios Iliofotou). Renamed the "n" column (number of occurences of a context) in the outcome of cprob to "[n]" and added warnings in cprob() and pstree(). 

[0.85]
- fixed bug in generate() when providing the first state in a sequence (s1 argument)
- generate(): added cnames argument to provide names for the state sequence object containing the generated sequences
- Added RColorBrewer to depends field in DESCRIPTION, otherwise the example using brewer.pal() avoids the package to be build
- Added a likelihood internal function that computes the (log)-likelihood of a PST, i.e., predicts the data to which the PST was fitted 
  with the PST. This function is used in pstree(), prune()
- Added a 'lik' option to prune() and pstree(). If TRUE (default), the likelihood of the newly created or pruned PST is computed 

[0.84]
- changed NAMESPACE and DESCRIPTION to avoid NOTE in package check
- changed welcome message in zzz.R
- added 'base' argument in predict() function

[0.83]
- updated 'pmine' method: 
  - unapproriate error message when no pattern satisfying criterion (reported by Aron Lindberg)
  - now both pmin and pmax can be specified
  - added 'prefix' option.

[0.82]
- displaying properly y axis label in pplot and pqplot

[0.81]
- modified examples in help pages to meet CRAN requirements ('Examples should run for no more than a few seconds each')

[0.80]
- help pages prepared for submission to the CRAN

[0.75]
- added a 'logLik' slot to 'PSTf' objects so that the log-likelihood is computed once, when the model is learned.
The logLik method now extracts the 'logLik' slot of a 'PSTf' object, instead of computing the value by predicting the learning sample with the object.

[0.74]
- BIC generic function now works on PST (added the 'nobs' method to get the number of observations, i.e. number of 
  symbols in the learning sample)

[0.73]
- new version of the generate method, much faster

[0.72]