@@ -1,5 +1,6 @@
 [0.86]
-- fixed bug when one of the states is named "n" (reported by Marios Iliofotou). Renamed the "n" column (number of occurences of a context) in the outcome of cprob to "[n]" and added warnings in cprob() and pstree(). 
+- fixed bug when one of the states is named "n" (reported by Marios Iliofotou). Renamed the "n" column (number of occurences of a context) in the outcome of cprob to "[n]" and added warnings in cprob() and pstree().
+- Suppressed horizontal bar identifying a leave on graphical representations of a PST, while non-terminal nodes are still identifyed by a line and a grey circle.  
 
 [0.85]
 - fixed bug in generate() when providing the first state in a sequence (s1 argument)
